--- a/app/frontend/public/index.html
+++ b/app/frontend/public/index.html
@@ -8,10 +8,9 @@
       content="Web site created using create-react-app"
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style-ul.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./imagens/favicon.ico">
-    <title></title>
+    <title>Biblioteca - Druziana Sartori</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
